--- a/templates/revisionlog.html
+++ b/templates/revisionlog.html
@@ -37,10 +37,24 @@
           <div class="choice">
             <fieldset>
               <legend>Mode:</legend>
-              ${radiobuttons(mode, 'mode',
-                 [('stop_on_copy', 'Stop on copy', 'default'),
-                  ('follow_copy', 'Follow copies'),
-                  ('path_history', 'Show only adds, moves and deletes')])}
+              <label>
+                <input type="radio" id="stop_on_copy" name="mode"
+                       value="stop_on_copy"
+                       checked="${mode in (None, 'stop_on_copy') or None}" />
+                Stop on copy
+              </label>
+              <label>
+                <input type="radio" id="follow_copy" name="mode"
+                       value="follow_copy"
+                       checked="${mode == 'follow_copy' or None}" />
+                Follow copies
+              </label>
+              <label>
+                <input type="radio" id="path_history" name="mode"
+                       value="path_history"
+                       checked="${mode == 'path_history' or None}" />
+                Show only adds, moves and deletes
+              </label>
             </fieldset>
           </div>
           <label><input type="checkbox" name="verbose" checked="${verbose and 'checked' or None}" />
@@ -95,8 +109,10 @@
 
                 <tr class="$odd_even">
                   <td class="diff">
-                    <input type="radio" name="old" value="${item.path}@${item.rev}" py:attrs="form_attrs(checked=idx==len(items)-1)" />
-                    <input type="radio" name="new" value="${item.path}@${item.rev}" py:attrs="form_attrs(checked=idx==0)" />
+                    <input type="radio" name="old" value="${item.path}@${item.rev}"
+                           checked="${idx == (len(items) - 1) or None}" />
+                    <input type="radio" name="new" value="${item.path}@${item.rev}"
+                           checked="${idx == 0 or None}" />
                   </td>
                   <td class="change" style="padding-left: ${item.depth}em">
                     <a title="View log starting at this revision" href="${href.log(item.path, rev=item.rev)}">
