--- a/templates/wiki_history.html
+++ b/templates/wiki_history.html
@@ -38,8 +38,10 @@
           <tbody>
             <tr py:for="idx, item in enumerate(history)" class="idx % 2 and 'odd' or 'even'">
               <td class="diff">
-                <input type="radio" name="old_version" value="$item.version" py:attrs="form_attrs(checked=idx==1)" />
-                <input type="radio" name="version" value="$item.version" py:attrs="form_attrs(checked=idx==0)" />
+                <input type="radio" name="old_version" value="$item.version"
+                       checked="${idx == 1 or None}" />
+                <input type="radio" name="version" value="$item.version"
+                       checked="${idx == 0 or None}" />
               </td>
               <td class="version">
                 <a href="${href.wiki(page.name, version=item.version)}" title="View this version">$item.version</a>
