--- a/templates/ticket_view.html
+++ b/templates/ticket_view.html
@@ -31,8 +31,7 @@
       <h1>Ticket #${ticket.id}
         <span class="status">(${ticket.status}<py:if
             test="ticket.type"> ${ticket.type}</py:if><py:if
-            test="ticket.resolution">: ${ticket.resolution}</py:if>
-          )</span>
+            test="ticket.resolution">: ${ticket.resolution}</py:if>)</span>
       </h1>
 
       <div id="ticket">
